--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: "rickyandmorty";
   src: url("./fonts/get_schwifty.ttf");
 }
 
-:root{
+:root {
   --font: "rickyandmorty";
 }
 * {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
-body{
+body {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
